--- a/Fooddie/Base.lproj/Main.storyboard
+++ b/Fooddie/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NI3-Y5-x4f">
                                                 <rect key="frame" x="0.0" y="0.0" width="93.666666666666671" height="74.333333333333329"/>
-                                                <color key="tintColor" red="0.10000000000000001" green="0.54000000000000004" blue="0.83999999999999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="tintColor" red="0.098039215686274508" green="0.54117647058823526" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="cart" catalog="system"/>
                                                 <connections>
                                                     <action selector="showCapturedMeals:" destination="gWf-MI-puK" eventType="touchUpInside" id="5L4-sR-E12"/>
@@ -138,7 +138,7 @@
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lgo-1v-ULb">
                                                 <rect key="frame" x="0.0" y="66" width="361" height="50"/>
-                                                <color key="backgroundColor" systemColor="systemGrayColor"/>
+                                                <color key="backgroundColor" red="0.098039215686274508" green="0.54117647058823526" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="s14-9Y-Q8K"/>
                                                 </constraints>
@@ -193,7 +193,7 @@
         <!--Captured Meal View Controller-->
         <scene sceneID="a5x-7L-Jxp">
             <objects>
-                <viewController id="QPw-1f-g3u" customClass="CapturedMealViewController" customModule="Fooddie" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CapturedMealViewController" id="QPw-1f-g3u" customClass="CapturedMealViewController" customModule="Fooddie" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jCd-M6-5Ei">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -225,9 +225,6 @@
         <image name="cart" catalog="system" width="128" height="102"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
