--- a/Fooddie/Layers/Business/Modules/CapturedMeal/View/CapturedMealTableViewCell.xib
+++ b/Fooddie/Layers/Business/Modules/CapturedMeal/View/CapturedMealTableViewCell.xib
@@ -16,8 +16,48 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ebm-zI-Qef">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2PA-BK-dEg">
+                                <rect key="frame" x="16" y="8" width="148" height="49"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lQF-79-IbA">
+                                <rect key="frame" x="164" y="8" width="148" height="49"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="8"/>
+                    </stackView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sof-Z0-tKB">
+                        <rect key="frame" x="0.0" y="64.666666666666671" width="320" height="0.3333333333333286"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="Ewi-rG-ZoH"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="Sof-Z0-tKB" secondAttribute="trailing" id="8Q7-qF-ReK"/>
+                    <constraint firstItem="ebm-zI-Qef" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Gx8-ia-W4w"/>
+                    <constraint firstItem="ebm-zI-Qef" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="KJM-AY-tTT"/>
+                    <constraint firstAttribute="bottom" secondItem="Sof-Z0-tKB" secondAttribute="bottom" id="LEt-Hh-2Qt"/>
+                    <constraint firstItem="Sof-Z0-tKB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OKz-Qu-lWb"/>
+                    <constraint firstAttribute="bottom" secondItem="ebm-zI-Qef" secondAttribute="bottom" id="WWw-9g-yCb"/>
+                    <constraint firstAttribute="trailing" secondItem="ebm-zI-Qef" secondAttribute="trailing" id="bKu-6J-SPu"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="mealLabel" destination="lQF-79-IbA" id="ek7-Hu-PHI"/>
+                <outlet property="nameLabel" destination="2PA-BK-dEg" id="zWq-jY-FG0"/>
+            </connections>
             <point key="canvasLocation" x="19.847328244274809" y="20.422535211267608"/>
         </tableViewCell>
     </objects>
