--- a/Fooddie/Base.lproj/Main.storyboard
+++ b/Fooddie/Base.lproj/Main.storyboard
@@ -92,18 +92,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Waa-Qs-O5I">
-                                <rect key="frame" x="16" y="75" width="361" height="281"/>
+                                <rect key="frame" x="16" y="75" width="361" height="252"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="l8A-a0-R8y">
-                                        <rect key="frame" x="0.0" y="16" width="361" height="213"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="200"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="150" placeholderIntrinsicHeight="150" translatesAutoresizingMaskIntoConstraints="NO" id="aru-cw-U56" customClass="CacheableImageView" customModule="Fooddie" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="361" height="213"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="361" height="200"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="j9a-D9-Vgx"/>
+                                                </constraints>
                                             </imageView>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="40" placeholderIntrinsicHeight="30" text="Ford" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FA0-ux-IBa">
-                                        <rect key="frame" x="16" y="241" width="329" height="40"/>
+                                        <rect key="frame" x="16" y="212" width="329" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Y4y-o4-pQH"/>
                                         </constraints>
@@ -113,7 +116,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="l8A-a0-R8y" firstAttribute="top" secondItem="Waa-Qs-O5I" secondAttribute="top" constant="16" id="2ia-Ee-Iih"/>
+                                    <constraint firstItem="l8A-a0-R8y" firstAttribute="top" secondItem="Waa-Qs-O5I" secondAttribute="top" id="2ia-Ee-Iih"/>
                                     <constraint firstItem="FA0-ux-IBa" firstAttribute="top" secondItem="l8A-a0-R8y" secondAttribute="bottom" constant="12" id="Euq-FO-Kbq"/>
                                     <constraint firstItem="FA0-ux-IBa" firstAttribute="leading" secondItem="Waa-Qs-O5I" secondAttribute="leading" constant="16" id="G2a-aK-nUu"/>
                                     <constraint firstItem="l8A-a0-R8y" firstAttribute="leading" secondItem="Waa-Qs-O5I" secondAttribute="leading" id="SjU-sS-47D"/>
@@ -123,7 +126,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3dT-mO-FM9">
-                                <rect key="frame" x="16" y="368" width="361" height="116"/>
+                                <rect key="frame" x="16" y="343" width="361" height="116"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="DMf-JD-Ila">
                                         <rect key="frame" x="0.0" y="0.0" width="361" height="116"/>
@@ -171,17 +174,17 @@
                         <viewLayoutGuide key="safeArea" id="B3m-Oe-kTs"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="3dT-mO-FM9" firstAttribute="top" secondItem="Waa-Qs-O5I" secondAttribute="bottom" constant="12" id="1Pb-Dj-3JG"/>
+                            <constraint firstItem="3dT-mO-FM9" firstAttribute="top" secondItem="Waa-Qs-O5I" secondAttribute="bottom" constant="16" id="1Pb-Dj-3JG"/>
                             <constraint firstItem="3dT-mO-FM9" firstAttribute="leading" secondItem="B3m-Oe-kTs" secondAttribute="leading" constant="16" id="E66-Rs-Fzt"/>
                             <constraint firstAttribute="trailing" secondItem="3dT-mO-FM9" secondAttribute="trailing" constant="16" id="GvK-a6-Sp2"/>
                             <constraint firstItem="Waa-Qs-O5I" firstAttribute="top" secondItem="B3m-Oe-kTs" secondAttribute="top" constant="16" id="MSO-hh-dce"/>
                             <constraint firstItem="Waa-Qs-O5I" firstAttribute="leading" secondItem="AeQ-yB-EHn" secondAttribute="leading" constant="16" id="Qz4-6e-Kre"/>
-                            <constraint firstItem="aru-cw-U56" firstAttribute="height" secondItem="AeQ-yB-EHn" secondAttribute="height" multiplier="0.25" id="frl-DV-rik"/>
                             <constraint firstItem="B3m-Oe-kTs" firstAttribute="trailing" secondItem="Waa-Qs-O5I" secondAttribute="trailing" constant="16" id="m4g-zi-dxg"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="QmT-PJ-gBw"/>
                     <connections>
+                        <outlet property="containerView" destination="Waa-Qs-O5I" id="ulr-tM-oj8"/>
                         <outlet property="foodImageView" destination="aru-cw-U56" id="h05-cN-Ayu"/>
                         <outlet property="nameTextField" destination="WHL-zx-iNE" id="6lq-WL-juA"/>
                         <outlet property="titleLabel" destination="FA0-ux-IBa" id="4HG-AZ-tIs"/>
