--- a/Fooddie/Base.lproj/LaunchScreen.storyboard
+++ b/Fooddie/Base.lproj/LaunchScreen.storyboard
@@ -17,27 +17,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fooddie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcx-Pg-klP">
-                                <rect key="frame" x="152.5" y="430.5" width="109" height="35"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S9o-KL-vpB">
+                                <rect key="frame" x="57" y="305" width="300" height="300"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ellipse 51" translatesAutoresizingMaskIntoConstraints="NO" id="0w3-dF-ufb">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image 10" translatesAutoresizingMaskIntoConstraints="NO" id="T6V-Z7-bm5">
+                                        <rect key="frame" x="1.5" y="1.5" width="297" height="297.5"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="0w3-dF-ufb" firstAttribute="top" secondItem="S9o-KL-vpB" secondAttribute="top" id="0ZT-sq-JF6"/>
+                                    <constraint firstAttribute="bottom" secondItem="0w3-dF-ufb" secondAttribute="bottom" id="Rs4-pM-TVV"/>
+                                    <constraint firstItem="T6V-Z7-bm5" firstAttribute="centerY" secondItem="0w3-dF-ufb" secondAttribute="centerY" id="b4j-PB-P2L"/>
+                                    <constraint firstAttribute="height" constant="300" id="nUq-wz-lXa"/>
+                                    <constraint firstItem="T6V-Z7-bm5" firstAttribute="centerX" secondItem="0w3-dF-ufb" secondAttribute="centerX" id="o2P-o2-4cG"/>
+                                    <constraint firstAttribute="trailing" secondItem="0w3-dF-ufb" secondAttribute="trailing" id="pKp-gg-6yG"/>
+                                    <constraint firstAttribute="width" constant="300" id="ulu-yt-quo"/>
+                                    <constraint firstItem="0w3-dF-ufb" firstAttribute="leading" secondItem="S9o-KL-vpB" secondAttribute="leading" id="xvw-RN-9rq"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="dcx-Pg-klP" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="TtZ-2h-e0e"/>
-                            <constraint firstItem="dcx-Pg-klP" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="jQj-me-1jb"/>
+                            <constraint firstItem="S9o-KL-vpB" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Vwl-jH-kyX"/>
+                            <constraint firstItem="S9o-KL-vpB" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="cGR-oi-eVF"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Ellipse 51" width="240" height="240"/>
+        <image name="image 10" width="297" height="297.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
